# lab1_graf

./: .gitignore  CMakeLists.txt
src/: glad.c  main.cpp
